# CyrilsRTK

applications/: CMakeLists.txt
applications/Combination/: CMakeLists.txt  main.cpp  spectral.ggo
applications/Decomposition/: CMakeLists.txt  main.cpp  spectral.ggo
applications/Diff/: CMakeLists.txt  main.cpp  spectral.ggo
applications/Error/: CMakeLists.txt  main.cpp  spectral.ggo
applications/Forward/: CMakeLists.txt  main.cpp  spectral.ggo
applications/rtkattenuationstomaterials/: CMakeLists.txt  rtkattenuationstomaterials.cxx  rtkattenuationstomaterials.ggo
applications/rtkcalibrationprojectionstopolynomialcoefficients/: CMakeLists.txt  rtkcalibrationprojectionstopolynomialcoefficients.cxx  rtkcalibrationprojectionstopolynomialcoefficients.ggo
applications/rtkdualenergyforwardmodel/: rtkdualenergyforwardmodel.cxx
applications/rtkdualenergysimplexdecomposition/: rtkdualenergysimplexdecomposition.cxx
applications/rtkspectralforwardmodel/: rtkspectralforwardmodel.cxx
applications/rtkspectralpolynomialcalibration/: CMakeLists.txt  rtkspectralpolynomialcalibration.cxx  rtkspectralpolynomialcalibration.ggo
applications/rtkspectralpolynomialdecomposition/: CMakeLists.txt  rtkspectralpolynomialdecomposition.cxx  rtkspectralpolynomialdecomposition.ggo
applications/rtkspectralsimplexdecomposition/: rtkspectralsimplexdecomposition.cxx
code/: rtkAttenuationsToMaterialsImageFilter.h  rtkAttenuationsToMaterialsImageFilter.hxx  rtkCalibrationProjectionsToPolynomialCoefficientsImageFilter.h  rtkCalibrationProjectionsToPolynomialCoefficientsImageFilter.hxx  rtkGeneralPurposeFunctions.h  rtkPolynomialCalculator.h  rtkPolynomialCalculator.hxx  rtkSpectralFilter.h  rtkSpectralFilter.hxx
include/: rtkMechlemOneStepSpectralReconstructionFilter.h  rtkMechlemOneStepSpectralReconstructionFilter.hxx  rtkSimplexSpectralProjectionsDecompositionImageFilter.h  rtkSimplexSpectralProjectionsDecompositionImageFilter.hxx  rtkSpectralForwardModelImageFilter.h  rtkSpectralForwardModelImageFilter.hxx
test/: CMakeLists.txt  rtkdecomposespectralprojectionstest.cxx  rtkspectralonesteptest.cxx
